# tong

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LIMITATIONS.md  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  examples.md  hermeticity.md  introduction.md  manifest-reference.md  quick-start.md  release-notes.md  roadmap.md  usage.md
crates/tong/: Cargo.toml
crates/tong-core/: Cargo.toml
crates/tong-core/src/: action.rs  build_state.rs  cache.rs  env.rs  error.rs  exec.rs  hash.rs  language.rs  lib.rs
crates/tong-graph/: Cargo.toml
crates/tong-graph/src/: features.rs  fetch.rs  graph.rs  lib.rs
crates/tong-manifest/: Cargo.toml
crates/tong-manifest/src/: dependency.rs  lib.rs  parser.rs  tests.rs  types.rs
crates/tong-rust/: Cargo.toml
crates/tong-rust/src/: args.rs  backend.rs  build_script.rs  dep_info.rs  lib.rs
crates/tong/src/: cli.rs  exec.rs  fetch.rs  graph.rs  hash.rs  language.rs  main.rs  manifest.rs  options.rs  paths.rs  rust_backend.rs
docs/: HERMETICITY.md  ROADMAP.md
examples/build-dep-project/: Cargo.toml  build.rs
examples/build-dep-project/build-helper/: Cargo.toml
examples/build-dep-project/src/: lib.rs  main.rs
examples/build-script-project/: Cargo.toml  build.rs
examples/build-script-project/src/: main.rs
examples/cli-mini/: Tong.toml
examples/cli-mini/src/: main.rs
examples/path-dep-project/: Cargo.toml
examples/path-dep-project/greet/: Cargo.toml
examples/simple-rust-project/: Cargo.toml
examples/tong-manifest-project/: Tong.toml
(+21 files in other folders)
