[workspace]
members = [
    "crates/tong",
    "crates/tong-core",
    "crates/tong-manifest",
    "crates/tong-graph",
    "crates/tong-rust",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/swarnimarun/tong"

[workspace.dependencies]
toml = "0.8"
blake3 = { version = "1", features = ["pure"] }

tong-core = { path = "crates/tong-core" }
tong-manifest = { path = "crates/tong-manifest" }
tong-graph = { path = "crates/tong-graph" }
tong-rust = { path = "crates/tong-rust" }
